Grid for blog cards, use tabs for nav

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@ body {
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
+    --border: hsl(240 3.7% 15.9%); /* Dark mode border color */
+    --background: hsl(240, 10%, 3.9%);
     --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
@@ -27,5 +29,9 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+
+    *, :before, :after {
+      border-color: var(--border);
+    }
   }
 }
