--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,27 @@ body {
     }
   }
 }
+
+@layer utilities {
+  .vertical-line::after {
+    content: "";
+    transform-origin: bottom center;
+    position: absolute;
+    width: 1px;
+    height: 41vh;
+    left: 35px;
+    top: calc(100% + 20px);
+    background: #64748b;  /* You can customize the color here */
+    opacity: 0.45;
+    animation: vLineIn 0.75s ease-in-out 1s forwards;
+  }
+}
+
+@keyframes vLineIn {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
