Update home page content and design, fix theming issues with disqus, add code marks styling for sanity.io, fix active tab in nav

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,10 +42,10 @@ body {
     transform-origin: bottom center;
     position: absolute;
     width: 1px;
-    height: 41vh;
-    left: 35px;
-    top: calc(100% + 20px);
-    background: #64748b;  /* You can customize the color here */
+    height: 71vh;  /* Adjust the height as needed */
+    left: calc(50% - 4px);     /* Center the line horizontally relative to the parent */
+    top: calc(100% + 20px); /* Adjust vertical position as necessary */
+    background: #64748b;  /* Line color */
     opacity: 0.45;
     animation: vLineIn 0.75s ease-in-out 1s forwards;
   }
